// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View job status by jobid handler should return correct job status if the job is found. 1`] = `
Object {
  "jobId": "jobId1",
  "jobName": "jobName1",
  "owner": "owner1",
  "rc": 0,
  "status": "success",
}
`;

exports[`View job status by jobid handler should return correct job status if the job is found. 2`] = `
Object {
  "fields": Array [
    "jobName",
    "jobId",
    "owner",
    "status",
    "rc",
    "retcode",
    "extra",
  ],
  "format": "object",
  "output": Object {
    "jobId": "jobId1",
    "jobName": "jobName1",
    "owner": "owner1",
    "rc": 0,
    "status": "success",
  },
}
`;
